--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <h1>Git Test</h1>
 
     <p>Git Test</p>
+
+    <ul>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List item 3</li>
+    </ul>
 </body>
 </html>
